tests/invalid/runtime/io_invalid_mode.pts
import Io;

function main() : void {
    Io.open("io_invalid.txt", "rw");
}
